--- a/AI_models_LU.ipynb
+++ b/AI_models_LU.ipynb
@@ -21,11 +21,9 @@
     "\n",
     "# Pre Processing\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.pipeline import make_pipeline\n",
     "from functools import partial\n",
     "from hyperopt import hp,fmin,tpe,Trials\n",
     "from hyperopt.pyll.base import scope\n",
@@ -36,23 +34,14 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "# Regressors\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.ensemble import VotingRegressor\n",
-    "\n",
     "# Classifiers\n",
     "from sklearn import svm\n",
     "from sklearn import linear_model\n",
     "from sklearn.svm import SVC, LinearSVC\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.linear_model import Perceptron\n",
-    "from sklearn.linear_model import SGDClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "# DL models\n",
     "from tensorflow.keras import layers \n",
@@ -1191,6 +1180,162 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ee11d87e-5fbd-4c40-bdab-e4e2d8acc97e",
+   "metadata": {},
+   "source": [
+    "### XGBoost (extreme Gradient Boosting) Classifier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b0e12ab-ef3d-4ae5-8950-43175169f3e3",
+   "metadata": {},
+   "source": [
+    "#### Apply different parameters of the classifier using RandomizedSearch for getting the best parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcb2c2c1-861b-4700-a539-29cd5a0be165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "le = LabelEncoder()\n",
+    "ytrain = le.fit_transform(y_train)\n",
+    "ytest = le.fit_transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c93367b-2997-46e9-aa82-602d17c0cc65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ytrain\n",
+    "ytest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa4c93a5-fb0a-44fc-973e-a1db848444bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To run xgboost on gpu select tree_method='hist' and device='gpu'\n",
+    "xgbc = XGBClassifier(n_estimators = 1000, tree_method = \"hist\", device = \"cuda\", random_state=42, max_depth=10)\n",
+    "param_cv = {\"gamma\": [0, 0.001, 0.005], \"learning_rate\": [1, 1.5, 2]}\n",
+    "xgb_cv = set_rand(xgbc, param_cv)\n",
+    "xgb_cv.get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2f49d8f-b16c-4edc-8716-d8794efa34fd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(datetime.datetime.now())\n",
+    "xgb_cv.fit(X_train, ytrain)\n",
+    "print(datetime.datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0015f14c-a2de-4a1d-9c61-dcfd5f94b450",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_results(xgb_cv, X_test, ytest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30cd95ce-2e2b-4f45-9ba3-69c5085d2930",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(datetime.datetime.now())\n",
+    "kfold = KFold(n_splits=10, shuffle=True)\n",
+    "kf_cv_scores = cross_val_score(xgb_cv, X_train, ytrain, cv=kfold )\n",
+    "print(\"K-fold CV average score: %.2f\" % kf_cv_scores.mean())\n",
+    "print(datetime.datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "194ced3d-b792-45f0-af53-f0509dfc370c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(datetime.datetime.now())\n",
+    "y_pred = xgb_cv.predict(X_test)\n",
+    "print(datetime.datetime.now())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ce4dfe6-bcb1-446f-9f6e-c4e7c62e1b23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# evaluation: Confusion Matrix\n",
+    "confusion_xgb = metrics.confusion_matrix(y_true = ytest, y_pred = y_pred)\n",
+    "confusion_xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d68d76b-1dba-441a-ac6e-3904ee5381a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cm_xgb = pd.DataFrame(confusion_xgb, index = [i for i in LU],\n",
+    "                  columns = [i for i in LU])\n",
+    "plt.figure(figsize = (10,7))\n",
+    "sns.heatmap(df_cm_xgb, annot=True,fmt='d',cmap=plt.cm.Blues)\n",
+    "save_fig(\"xgb_cm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31c6a36c-ba9a-4603-91eb-751bcc102b0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# measure accuracy\n",
+    "metrics.accuracy_score(y_true=ytest, y_pred=y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac322456-5026-473e-9560-5fe08b770f65",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Save model as pkl file \n",
+    "pickle.dump(xgb_cv, open('models/LU/xgb_cv.pkl', 'wb'))\n",
+    "#pickled_model = pickle.load(open('models/LU/gb_cv.pkl', 'rb'))\n",
+    "#pickled_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "717a6478-2f7c-40b0-8a96-4d7bf9930a3d",
    "metadata": {},
    "source": [
@@ -1868,7 +2013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
